--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<% @posts.each do |p| %>
+<p><%= p.user.username %></p>
+<h2><%= p.title %> </h2>
+<p><%= p.body %> </p>
+<% end %>
