--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,11 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<h1>New Post</h1>
+<%= form_for(@post, url: posts_create_path) do |f| %>
+
+<%= f.label :title %>
+<%= f.text_field :title %>
+<br><br>
+<%= f.label :body %>
+<%= f.text_area :body %>
+<br><br>
+<%= f.submit "create post" %>
+<% end %>
