--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,20 @@
   </head>
 
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><%= link_to "Home", root_path %> </li>
+          <li><%= link_to "New post", posts_new_path %> </li>
+          <% if current_user %>
+            <li><%= link_to "Logout", logout_path, :method => :delete %> </li>
+          <% else %>
+            <li><%= link_to "Sign up", users_new_path %> </li>
+            <li><%= link_to "Login", login_path %> </li>
+          <% end %>
+        </ul>
+      </nav>
+    </header>
     <%= yield %>
   </body>
 </html>
